@@ -1,5 +1,8 @@
 Release 1.26 - 03/09/2021
 
+   * Allow for case insensitive headers for configuration of the PDFParser
+     and the TesseractOCRParser in tika-server via Subhajit Das (TIKA-3320).
+
    * Improve detection and parsing of XPS files (TIKA-3316).
 
    * General dependency upgrades (TIKA-3244).
